add tsp_aco test notebook

--- a/problems/tsp_aco/test.ipynb
+++ b/problems/tsp_aco/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "N_ANTS = 30\n",
-    "N_ITERATIONS = [1, 5, 10, 20, 40, 60, 80, 100]\n",
+    "N_ITERATIONS = [1, 10, 30, 50, 100, 150, 200]\n",
     "\n",
     "\n",
     "\n",
@@ -45,7 +45,7 @@
     "def solve(node_pos):\n",
     "    dist_mat = distance_matrix(node_pos, node_pos)\n",
     "    dist_mat[np.diag_indices_from(dist_mat)] = 1 # set diagonal to a large number\n",
-    "    heu = heuristics_reevo(dist_mat.copy()) + 1e-9\n",
+    "    heu = heuristics_reevo(dist_mat) + 1e-9\n",
     "    heu[heu < 1e-9] = 1e-9\n",
     "    aco = ACO(dist_mat, heu, n_ants=N_ANTS)\n",
     "    \n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,32 +70,29 @@
      "output_type": "stream",
      "text": [
       "[*] Running ...\n",
-      "[*] Average for 20, 1 iterations: 3.9003731003737356\n",
-      "[*] Average for 20, 5 iterations: 3.8462281953062325\n",
-      "[*] Average for 20, 10 iterations: 3.835403331472863\n",
-      "[*] Average for 20, 20 iterations: 3.829248570223732\n",
-      "[*] Average for 20, 40 iterations: 3.82684029390981\n",
-      "[*] Average for 20, 60 iterations: 3.8268176874268875\n",
-      "[*] Average for 20, 80 iterations: 3.826708686712287\n",
-      "[*] Average for 20, 100 iterations: 3.826708686712287\n",
+      "[*] Average for 20, 1 iterations: 3.889379511456282\n",
+      "[*] Average for 20, 10 iterations: 3.835950148102565\n",
+      "[*] Average for 20, 30 iterations: 3.8290479032548324\n",
+      "[*] Average for 20, 50 iterations: 3.828073158679342\n",
+      "[*] Average for 20, 100 iterations: 3.8277813822143028\n",
+      "[*] Average for 20, 150 iterations: 3.827401936786191\n",
+      "[*] Average for 20, 200 iterations: 3.827357036991053\n",
       "\n",
-      "[*] Average for 50, 1 iterations: 6.275422895093018\n",
-      "[*] Average for 50, 5 iterations: 5.990559736071067\n",
-      "[*] Average for 50, 10 iterations: 5.9140437101383165\n",
-      "[*] Average for 50, 20 iterations: 5.868818218520994\n",
-      "[*] Average for 50, 40 iterations: 5.842789093344989\n",
-      "[*] Average for 50, 60 iterations: 5.826968493451817\n",
-      "[*] Average for 50, 80 iterations: 5.814727992597635\n",
-      "[*] Average for 50, 100 iterations: 5.808828626754723\n",
+      "[*] Average for 50, 1 iterations: 6.297774555526493\n",
+      "[*] Average for 50, 10 iterations: 5.930767443576591\n",
+      "[*] Average for 50, 30 iterations: 5.856143165091699\n",
+      "[*] Average for 50, 50 iterations: 5.8347924836227865\n",
+      "[*] Average for 50, 100 iterations: 5.811928723670486\n",
+      "[*] Average for 50, 150 iterations: 5.801042592264493\n",
+      "[*] Average for 50, 200 iterations: 5.795809427231816\n",
       "\n",
-      "[*] Average for 100, 1 iterations: 9.419730651353163\n",
-      "[*] Average for 100, 5 iterations: 8.787484845631024\n",
-      "[*] Average for 100, 10 iterations: 8.543841239372147\n",
-      "[*] Average for 100, 20 iterations: 8.385591062374568\n",
-      "[*] Average for 100, 40 iterations: 8.26766594518863\n",
-      "[*] Average for 100, 60 iterations: 8.244992338773269\n",
-      "[*] Average for 100, 80 iterations: 8.210210498350582\n",
-      "[*] Average for 100, 100 iterations: 8.177952997029182\n",
+      "[*] Average for 100, 1 iterations: 9.39701402755209\n",
+      "[*] Average for 100, 10 iterations: 8.571086477028867\n",
+      "[*] Average for 100, 30 iterations: 8.335871168733245\n",
+      "[*] Average for 100, 50 iterations: 8.264958774055497\n",
+      "[*] Average for 100, 100 iterations: 8.18270055495439\n",
+      "[*] Average for 100, 150 iterations: 8.136201210564815\n",
+      "[*] Average for 100, 200 iterations: 8.123365266644909\n",
       "\n"
      ]
     }
