update tsp test notebook

--- a/problems/tsp_aco/test.ipynb
+++ b/problems/tsp_aco/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,29 +70,13 @@
      "output_type": "stream",
      "text": [
       "[*] Running ...\n",
-      "[*] Average for 20, 1 iterations: 3.889379511456282\n",
-      "[*] Average for 20, 10 iterations: 3.835950148102565\n",
-      "[*] Average for 20, 30 iterations: 3.8290479032548324\n",
-      "[*] Average for 20, 50 iterations: 3.828073158679342\n",
-      "[*] Average for 20, 100 iterations: 3.8277813822143028\n",
-      "[*] Average for 20, 150 iterations: 3.827401936786191\n",
-      "[*] Average for 20, 200 iterations: 3.827357036991053\n",
-      "\n",
-      "[*] Average for 50, 1 iterations: 6.297774555526493\n",
-      "[*] Average for 50, 10 iterations: 5.930767443576591\n",
-      "[*] Average for 50, 30 iterations: 5.856143165091699\n",
-      "[*] Average for 50, 50 iterations: 5.8347924836227865\n",
-      "[*] Average for 50, 100 iterations: 5.811928723670486\n",
-      "[*] Average for 50, 150 iterations: 5.801042592264493\n",
-      "[*] Average for 50, 200 iterations: 5.795809427231816\n",
-      "\n",
-      "[*] Average for 100, 1 iterations: 9.39701402755209\n",
-      "[*] Average for 100, 10 iterations: 8.571086477028867\n",
-      "[*] Average for 100, 30 iterations: 8.335871168733245\n",
-      "[*] Average for 100, 50 iterations: 8.264958774055497\n",
-      "[*] Average for 100, 100 iterations: 8.18270055495439\n",
-      "[*] Average for 100, 150 iterations: 8.136201210564815\n",
-      "[*] Average for 100, 200 iterations: 8.123365266644909\n",
+      "[*] Average for 20, 1 iterations: 3.9138639767304517\n",
+      "[*] Average for 20, 10 iterations: 3.868449540571445\n",
+      "[*] Average for 20, 30 iterations: 3.864481260784807\n",
+      "[*] Average for 20, 50 iterations: 3.864481260784807\n",
+      "[*] Average for 20, 100 iterations: 3.8639757221712103\n",
+      "[*] Average for 20, 150 iterations: 3.8639757221712103\n",
+      "[*] Average for 20, 200 iterations: 3.8633489771380023\n",
       "\n"
      ]
     }
@@ -100,8 +84,8 @@
    "source": [
     "print(\"[*] Running ...\")\n",
     "\n",
-    "for problem_size in [20, 50, 100]:\n",
-    "    dataset_path = f\"./dataset/test{problem_size}_dataset.npy\"\n",
+    "for problem_size in [20]:\n",
+    "    dataset_path = f\"./dataset/val{problem_size}_dataset.npy\"\n",
     "    node_positions = np.load(dataset_path)\n",
     "    logging.info(f\"[*] Evaluating {dataset_path}\")\n",
     "    n_instances = node_positions.shape[0]\n",
